RESOLVED FIXED53619
Floats should not use physical terminology for their rects.
https://bugs.webkit.org/show_bug.cgi?id=53619
Summary Floats should not use physical terminology for their rects.
Dave Hyatt
Reported 2011-02-02 12:47:56 PST
Floats should not use physical terminology for their rects. Replace left/Top with x and y.
Attachments
Patch (14.35 KB, patch)
2011-02-02 12:49 PST, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2011-02-02 12:49:12 PST
Dave Hyatt
Comment 2 2011-02-02 12:59:32 PST
Fixed in r77403.
WebKit Review Bot
Comment 3 2011-02-02 15:46:34 PST
http://trac.webkit.org/changeset/77403 might have broken GTK Linux 32-bit Release The following tests are not passing: editing/selection/find-yensign-and-backslash.html http/tests/websocket/tests/handshake-fail-by-sub-protocol-mismatch.html
Note You need to log in before you can comment on or make changes to this bug.