https://bugs.webkit.org/show_bug.cgi?id=53619

Reviewed by Dan Bernstein.

Floats should not use physical terminology for their rects. Replace left/top with x/y and right/bottom
with maxX/maxY.  This matches IntRect.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addOverflowFromFloats):
(WebCore::RenderBlock::flipFloatForWritingMode):
(WebCore::RenderBlock::paintFloats):
(WebCore::RenderBlock::selectionGaps):
(WebCore::RenderBlock::addOverhangingFloats):
(WebCore::RenderBlock::addIntrudingFloats):
(WebCore::RenderBlock::hitTestFloats):
(WebCore::RenderBlock::adjustForBorderFit):
* rendering/RenderBlock.h:
(WebCore::RenderBlock::FloatingObject::x):
(WebCore::RenderBlock::FloatingObject::maxX):
(WebCore::RenderBlock::FloatingObject::y):
(WebCore::RenderBlock::FloatingObject::maxY):
(WebCore::RenderBlock::FloatingObject::setX):
(WebCore::RenderBlock::FloatingObject::setY):
(WebCore::RenderBlock::logicalTopForFloat):
(WebCore::RenderBlock::logicalBottomForFloat):
(WebCore::RenderBlock::logicalLeftForFloat):
(WebCore::RenderBlock::logicalRightForFloat):
(WebCore::RenderBlock::setLogicalTopForFloat):
(WebCore::RenderBlock::setLogicalLeftForFloat):
(WebCore::RenderBlock::xPositionForFloatIncludingMargin):
(WebCore::RenderBlock::yPositionForFloatIncludingMargin):



Canonical link: https://commits.webkit.org/67487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77403 268f45cc-cd09-0410-ab3c-d52691b4dbfc